<resources>
    <string name="app_name">FixXpert</string>
    <string name="an_skill_india_initiative">An Skill India Initiative</string>
    <string name="title_activity_register">Register_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="mobile_no">Mobile No *</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="password">Password *</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_date_of_birth_dd_mm_yy">Enter your date of birth (dd/mm/yy)</string>
    <string name="register_to_login">Register To Login</string>
    <string name="full_name">Full Name *</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="date_of_birth">Date Of Birth *</string>
    <string name="click_here_to_sign_up">Click Here To Sign Up</string>
    <string name="click_here_to_sign_in">Click Here to Sign in</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
</resources>