<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity"
    tools:ignore="SpeakableTextPresentCheck">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tvheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:letterSpacing="0"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textColor="#BB3E3E"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvfullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvheading"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/full_name"
            android:textColor="#190101"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--         second box-->
        <EditText
            android:id="@+id/et_enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvfullname"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_your_full_name"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_enter_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email_address"
            android:textColor="#190101"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvemail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textSize="16sp" />

        <!--        3rd box -->

        <TextView
            android:id="@+id/tvdob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_enter_email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/date_of_birth"
            android:textColor="#190101"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_enter_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvdob"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_your_date_of_birth_dd_mm_yy"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:textSize="16sp" />

        <!--        4th box -->
        <TextView
            android:id="@+id/tvmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_enter_dob"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/mobile_no"
            android:textColor="#190101"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_enter_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvmobile"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:minHeight="50dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_enter_mobile"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:textColor="#190101"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvpassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvrepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_enter_password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/confirm_password"
            android:textColor="#190101"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_enter_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvrepassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/regbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_enter_repassword"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_gradeint"
            android:elevation="10dp"
            android:fontFamily="@font/poppins"
            android:minWidth="130dp"
            android:shadowColor="#444040"
            android:shadowDx="2"
            android:shadowDy="10"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvsignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regbutton"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/click_here_to_sign_in"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RelativeLayout>


</ScrollView>